Fix p5 canvas overflow issue
Which affected the background image and the rest of the body.

--- a/2025stage/css/styles.css
+++ b/2025stage/css/styles.css
@@ -11617,7 +11617,7 @@ body {
   width: 100%;
   height: auto;
   min-height: 55rem;
-  padding: 15rem 0;
+  padding: 2rem 0;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/gaudi-roof-desat.jpg");
   /* background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 1) 90%, #000 100%); */
   background-position: center;
@@ -11649,7 +11649,7 @@ body {
     line-height: 4rem;
   }
 }
-@media (min-width: 992px) {
+@media (max-width: 992px) {
   .masthead {
     height: 100vh;
     padding: 2rem;
@@ -11662,6 +11662,12 @@ body {
   .masthead h2, .masthead .h2 {
     max-width: 30rem;
     font-size: 2.25rem;
+  }
+}
+
+@media (max-width: 520px) {
+  .masthead {
+    padding: 4rem;
   }
 }
 
@@ -11785,5 +11791,25 @@ body {
 @keyframes blinker {
   50% {
     opacity: 0;
+  }
+}
+
+.canvas-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+@media (max-width: 650px) {
+  .canvas-container {
+    transform: translateX(-50%) scale(0.8);
+    transform-origin: top;
+  }
+}
+
+@media (max-width: 520px) {
+  .canvas-container {
+    transform: translateX(-50%) scale(0.6);
   }
 }
